# agent-pr-evidence

./: AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  README.zh-CN.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: homebrew.md  product-foundation.md  publishing.md
examples/: agent-pr-evidence.yml  baseline.json
ops/constraints/: production.md
scripts/: run-action.py
src/agent_pr_evidence/: __main__.py  baseline.py  cli.py  collector.py  config.py  git_adapter.py  model.py  redaction.py  renderers.py
tests/: test_baseline_gate.py  test_config_profiles.py  test_docs.py  test_evidence.py  test_github_action.py  test_pr_corpus.py
tests/fixtures/pr-corpus/: v1.yml
