[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xone-agent-pr-evidence"
version = "0.4.1"
description = "Generate reviewable safety evidence for AI-agent-generated pull requests."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agent-pr-evidence = "agent_pr_evidence.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
